@@ -2,11 +2,14 @@ package guru.springframework.controller;
 
 import guru.springframework.commands.RecipeCommand;
 import guru.springframework.domain.Recipe;
+import guru.springframework.exceptions.NotFoundException;
 import guru.springframework.service.RecipeService;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.ModelAndView;
 
 @Slf4j
 @Controller
@@ -20,7 +23,7 @@ public class RecipeController {
 	@GetMapping
 	@RequestMapping({"/recipe/{id}/show"})
 	public String showById(@PathVariable String id, Model model){
-		model.addAttribute("recipe", recipeService.findById(new Long(id)));
+		model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
 		return "recipe/show";
 	}
 
@@ -50,5 +53,14 @@ public class RecipeController {
 	public String deleteById(@PathVariable String id){
 		recipeService.deleteById(Long.valueOf(id));
 		return "redirect:/";
+	}
+
+	@ResponseStatus(HttpStatus.NOT_FOUND)
+	@ExceptionHandler(NotFoundException.class)
+	public ModelAndView handleNotFound(Exception exception){
+		ModelAndView modelAndView = new ModelAndView();
+		modelAndView.setViewName("404Error");
+		modelAndView.addObject("exception", exception);
+		return modelAndView;
 	}
 }
